* Fixed: Prevented UnitObj.Health sometimes being nil.
* Fixed: Table entry errors for new units created via Unit.Target.
* Fixed: Some odd behaviour with cross-shard raid messages.
* Fixed: Forced removal of targets which have become idle/removed. (Disposable pet fix for Add-Watch)
* Removed: Redundant raid queue code. Slight performance increase.

Res Master
* Fixed: Graphical glitch with some death states. This should now be more reliable.

Encounters
* Fixed: Moved Combat state checking higher in the condition stage to prevent false encounter starts, and Mods locking themselves from starting correctly.
* Note: Recently I've noticed Mobs and Players having no combat state both in-game and via the Addon API, this was messing with KBM's Encounter validity states.
* Change: Should a Mod incorrectly attempt a start due to unusual client states, KBM will hard reset the mod preventing it from locking up entirely.

Menu
* Fixed: All custom color settings will now work as intended. It'll remember default colors, and last color chosen when switching to/from custom.
* Change: Custom colors for objects are applied immediately.

Notify and Chat Events
* Fixed: Removed global references.
* Change: Prevented capture method sending nil for Target.
* Change: Now sends Boss.Name as the Caster field.

New Castbar System (During Alpha)
* IMPORTANT: ALL Castbar settings have be reset to default due to how the new system works.
* Note: The system is now almost complete. Actual bars are created but forced to disabled for this build.
* Note: Bars are in for all areas. Please report any glitches or issues.
* New: Engine and Bar for Player castbar.
* New: Engine and Bar for Target castbar.
* New: Engine and Bar Player Focus castbar.
* New: Engine and Bars for all Encounters.
* New: Global Encounter Castbar settings are just that, regardless of Multi-boss fights. 
* New: Castbar placement is now based on relative screen coordinates rather than absolute.